--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "12.0.8",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "eslint": "8.7.0",
