--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.3.0",
     "@mui/material": "^5.3.0",
-    "animejs": "^3.2.1",
+    "framer-motion": "^6.2.3",
     "next": "12.0.8",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
