--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-material-ui-carousel": "^3.1.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
