--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.3.0",
+    "@mui/lab": "^5.0.0-alpha.66",
     "@mui/material": "^5.3.0",
+    "@notionhq/client": "^0.4.13",
     "framer-motion": "^6.2.3",
     "next": "12.0.8",
     "prop-types": "^15.8.1",
