--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-material-ui-carousel": "^3.1.1",
+    "react-snowfall": "^1.1.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
