--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@mantine/next": "^4.2.10",
 		"@mantine/notifications": "^4.2.10",
 		"@mantine/spotlight": "^4.2.10",
+		"cookies-next": "^2.0.4",
 		"next": "12.1.6",
 		"react": "18.2.0",
 		"react-dom": "18.2.0"
