--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 		"cookies-next": "^2.0.4",
 		"next": "12.1.6",
 		"react": "18.2.0",
-		"react-dom": "18.2.0"
+		"react-dom": "18.2.0",
+		"tabler-icons-react": "^1.50.0"
 	},
 	"devDependencies": {
 		"eslint": "8.18.0",
