--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"next": "12.1.6",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-scroll-parallax": "^3.2.0",
 		"tabler-icons-react": "^1.50.0"
 	},
 	"devDependencies": {
