chore(jsconfig): add module alias to 'hooks' folder

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,9 @@
 		"baseUrl": ".",
 		"paths": {
 			"@components": ["src/components"],
-			"@components/*": ["src/components/*"]
+			"@components/*": ["src/components/*"],
+			"@hooks": ["src/hooks"],
+			"@hooks/*": ["src/hooks/*"]
 		}
 	}
 }
