--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,7 +5,9 @@
 			"@components": ["src/components"],
 			"@components/*": ["src/components/*"],
 			"@hooks": ["src/hooks"],
-			"@hooks/*": ["src/hooks/*"]
+			"@hooks/*": ["src/hooks/*"],
+			"@utils": ["src/utils"],
+			"@utils/*": ["src/utils/*"]
 		}
 	}
 }
