fix(jsconfig): mistype 'styles'

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -8,7 +8,7 @@
 			"@hooks/*": ["src/hooks/*"],
 			"@utils": ["src/utils"],
 			"@utils/*": ["src/utils/*"],
-			"@style": ["src/styles"],
+			"@styles": ["src/styles"],
 			"@styles/*": ["src/styles/*"]
 		}
 	}
