--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,16 +2,7 @@
 	"compilerOptions": {
 		"baseUrl": ".",
 		"paths": {
-			"@components": ["src/components"],
-			"@components/*": ["src/components/*"],
-			"@hooks": ["src/hooks"],
-			"@hooks/*": ["src/hooks/*"],
-			"@utils": ["src/utils"],
-			"@utils/*": ["src/utils/*"],
-			"@styles": ["src/styles"],
-			"@styles/*": ["src/styles/*"],
-			"@lib": ["src/lib"],
-			"@lib/*": ["src/lib/*"]
+			"@/*": ["src/*"]
 		}
 	}
 }
