build(npm): change react and next versions to avoid ssr issues

--- a/package.json
+++ b/package.json
@@ -9,23 +9,23 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@mantine/core": "^4.2.10",
-		"@mantine/form": "^4.2.10",
-		"@mantine/hooks": "^4.2.10",
-		"@mantine/modals": "^4.2.10",
-		"@mantine/next": "^4.2.10",
-		"@mantine/notifications": "^4.2.10",
-		"@mantine/spotlight": "^4.2.10",
+		"@mantine/core": "^4.2.2",
+		"@mantine/form": "^4.2.2",
+		"@mantine/hooks": "^4.2.2",
+		"@mantine/modals": "^4.2.2",
+		"@mantine/next": "^4.2.2",
+		"@mantine/notifications": "^4.2.2",
+		"@mantine/spotlight": "^4.2.2",
 		"@notionhq/client": "^1.0.4",
 		"@octokit/rest": "^18.12.0",
 		"cookies-next": "^2.0.4",
-		"next": "12.1.6",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
-		"react-parallax-tilt": "^1.7.42",
+		"next": "^12.1.5",
+		"react": "^18.1.0",
+		"react-dom": "^18.1.0",
+		"react-parallax-tilt": "^1.7.43",
 		"react-responsive-carousel": "^3.2.23",
 		"react-scroll-parallax": "^3.2.0",
-		"tabler-icons-react": "^1.50.0",
+		"tabler-icons-react": "^1.51.0",
 		"zod": "^3.17.3"
 	},
 	"devDependencies": {
