--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
 		"next": "^12.1.5",
 		"react": "^18.1.0",
 		"react-dom": "^18.1.0",
+		"react-icons": "^5.3.0",
 		"react-parallax-tilt": "^1.7.43",
 		"react-responsive-carousel": "^3.2.23",
 		"react-scroll-parallax": "^3.2.0",
-		"tabler-icons-react": "^1.51.0",
+		"tabler-icons-react": "^1.56.0",
 		"zod": "^3.17.3"
 	},
 	"devDependencies": {
