--- a/package.json
+++ b/package.json
@@ -9,25 +9,26 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@mantine/core": "^4.2.2",
-		"@mantine/form": "^4.2.2",
-		"@mantine/hooks": "^4.2.2",
-		"@mantine/modals": "^4.2.2",
-		"@mantine/next": "^4.2.2",
-		"@mantine/notifications": "^4.2.2",
-		"@mantine/spotlight": "^4.2.2",
+		"@mantine/carousel": "5.10.5",
+		"@mantine/core": "^5.10.5",
+		"@mantine/form": "^5.10.5",
+		"@mantine/hooks": "^5.10.5",
+		"@mantine/modals": "^5.10.5",
+		"@mantine/next": "^5.10.5",
+		"@mantine/notifications": "^5.10.5",
+		"@mantine/spotlight": "^5.10.5",
 		"@notionhq/client": "^1.0.4",
 		"@octokit/rest": "^18.12.0",
-		"cookies-next": "^2.0.4",
-		"next": "^12.1.5",
-		"react": "^18.1.0",
-		"react-dom": "^18.1.0",
+		"cookies-next": "^2.1.2",
+		"embla-carousel-react": "^8.2.0",
+		"next": "^12.3.4",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
 		"react-icons": "^5.3.0",
-		"react-parallax-tilt": "^1.7.43",
-		"react-responsive-carousel": "^3.2.23",
-		"react-scroll-parallax": "^3.2.0",
+		"react-parallax-tilt": "^1.7.237",
+		"react-scroll-parallax": "^3.4.5",
 		"tabler-icons-react": "^1.56.0",
-		"zod": "^3.17.3"
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"eslint": "8.18.0",
